--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@ var info = map.append("div")
 					} else if ( d.SPECIES == "QUAL" ) { return "White Oak"
 					} else if ( d.SPECIES == "MEGL" ) { return "Dawn Redwood"
 					} else if ( d.SPECIES == "PIST" ) { return "Eastern White Pine"
-					} else if ( d.SPECIES == "TADI" ) { return "Baldcypress";
+					} else if ( d.SPECIES == "TADI" ) { return "Baldcypress"
+					} else { return "Unknown";
 			 	}})
 			
 		points.call(tip);
@@ -247,10 +248,16 @@ function createMap(dataset) {
 					} else if ( d.SPECIES == "QUAL" ) { return "#fff"
 					} else if ( d.SPECIES == "MEGL" ) { return "#f7a228"
 					} else if ( d.SPECIES == "PIST" ) { return "#c9ffab"
-					} else if ( d.SPECIES == "TADI" ) { return "#ff8034";
+					} else if ( d.SPECIES == "TADI" ) { return "#ff8034"
+					} else { return "#999";
 			 	}})
 	.style("opacity", 0.7)
-	.attr("r", 6)
+	.attr("r", function(d) { 
+		if ( d.DIAMETER <= 10 ) { return "3"
+			} else if ( d.DIAMETER > 10 && d.DIAMETER <= 20 ) { return "6"
+			} else if ( d.DIAMETER > 20 && d.DIAMETER <= 45 ) { return "12"
+			} else if ( d.DIAMETER > 45 ) { return "18";
+		}})
 	.attr("cx", function(d) {return projection([d.y,d.x])[0]})
 	.attr("cy", function(d) {return projection([d.y,d.x])[1]})
 	.on('mouseover', tip.show)
