changes to tree variable object

--- a/index-canvas.html
+++ b/index-canvas.html
@@ -247,6 +247,63 @@ var locations = d3.select('#points');
 
 var layer = d3.select('.layer');
 
+var trees = [
+{code: 'ACPL', common: 'Norway Maple', genus: 'Acer', species: 'platanoides', family: 'Sapindaceae', color: '#00567e'},
+{code: 'ACRU', common: 'Red Maple', genus: 'Acer', species: 'rubrum', family: 'Sapindaceae', color: '#0084ff'},
+{code: 'ACSA1', common: 'Silver Maple', genus: 'Acer', species: 'saccharinum', family: 'Sapindaceae', color: '#c3c3c3'},
+{code: 'FRPE', common: 'Green Ash', genus: 'Fraxinus', species: 'pennsylvanica', family: 'Oleaceae', color: '#007e59'},
+{code: 'GLTR', common: 'Honeylocust', genus: 'Gleditsia', species: 'triacanthos', family: 'Fabaceae', color: '#dcab00'},
+{code: 'TICO', common: 'Littleleaf Linden', genus: 'Tilia', species: 'cordata', family: 'Tiliaceae', color: '#006ddc'},
+{code: 'PYCA', common: 'Callery Pear', genus: 'Pyrus ', species: 'calleryana', family: 'Rosaceae', color: '#00dc53'},
+{code: 'QUPA', common: 'Pin Oak', genus: 'Quercus', species: 'palustris', family: 'Fagaceae', color: '#739351'},
+{code: 'PLAC', common: 'London Planetree', genus: 'Platanus', species: 'X acerfolia', family: 'Platanaceae', color: '#da4c4c'},
+{code: 'GIBI', common: 'Ginkgo', genus: 'Ginkgo', species: 'biloba', family: 'Ginkgoaceae', color: '#deee27'},
+{code: 'SYRE', common: 'Japanese Tree Lilac', genus: 'Syringa', species: 'reticulata', family: 'Oleaceae', color: '#b827ee'},
+{code: 'COFL', common: 'Flowering Dogwood', genus: 'Cornus', species: 'florida', family: 'Cornaceae', color: '#ee27a6'},
+{code: 'CEJA', common: 'Katsura Tree', genus: 'Cercidiphyllum', species: 'japonicum', family: 'Cercidiphyllaceae', color: '#385b9a'},
+{code: 'AEHI', common: 'Horsechestnut', genus: 'Aesculus', species: 'hippocastanum', family: 'Sapindaceae', color: '#193569'},
+{code: 'ACPLCK', common: 'Norway Maple Crimson King', genus: 'Acer', species: 'platanoides 'Crimson King'', family: 'Sapindaceae', color: '#ff0030'},
+{code: 'ACSA2', common: 'Sugar Maple', genus: 'Acer', species: 'saccharum', family: 'Sapindaceae', color: '#61827a'},
+{code: 'ACCA', common: 'Hedge Maple', genus: 'Acer', species: 'campestre', family: 'Sapindaceae', color: '#39806f'},
+{code: 'ACGI', common: 'Amur Maple', genus: 'Acer', species: 'ginnala', family: 'Sapindaceae', color: '#04646d'},
+{code: 'ACPA', common: 'Japanese Maple', genus: 'Acer', species: 'palmatum', family: 'Sapindaceae', color: '#01a3e7'},
+{code: 'ACPS', common: 'Sycamore Maple', genus: 'Acer', species: 'pseudoplatanus', family: 'Sapindaceae', color: '#3c9eac'},
+{code: 'STJA2', common: 'Japanese Pagoda Tree', genus: 'Sophora', species: 'japonica', family: 'Fabaceae', color: '#0b6d7c'},
+{code: 'ROPS', common: 'Black Locust', genus: 'Robinia', species: 'pseudoacacia', family: 'Fabaceae', color: '#000'},
+{code: 'ULAM', common: 'American Elm', genus: 'Ulmus', species: 'americana', family: 'Ulmaceae', color: '#cd3a00'},
+{code: 'ULPA', common: 'Chinese Elm', genus: 'Ulmus', species: 'parvifolia', family: 'Ulmaceae', color: '#7c2b0b'},
+{code: 'ZESE', common: 'Japanese Zelkova', genus: 'Zelkova', species: 'serrata', family: 'Ulmaceae', color: '#00cd05'},
+{code: 'LIST', common: 'Sweetgum', genus: 'Liquidambar', species: 'styraciflua', family: 'Altingiaceae', color: '#cd6f00'},
+{code: 'GYDI', common: 'Kentucky Coffeetree', genus: 'Gymnocladus', species: 'dioicus', family: 'Fabaceae', color: '#61390a'},
+{code: 'AIAL', common: 'Tree of Heaven', genus: 'Ailanthus', species: 'altissima', family: 'Simaroubaceae', color: '#fff4c8'},
+{code: 'KOPA', common: 'Goldenrain Tree', genus: 'Koelreuteria', species: 'paniculata', family: 'Sapindaceae', color: '#e0b712'},
+{code: 'CECA', common: 'Eastern Redbud', genus: 'Cercis', species: 'canadensis', family: 'Fabaceae', color: '#7b0c21'},
+{code: 'LITU', common: 'Tulip Tree', genus: 'Liriodendron', species: 'tulipifera', family: 'Magnoliaceae', color: '#b2223d'},
+{code: 'TIAM', common: 'American Linden', genus: 'Tilia', species: 'americana', family: 'Tiliaceae', color: '#81d4d9'},
+{code: 'TITO', common: 'Silver Linden', genus: 'Tilia', species: 'tomentosa', family: 'Malvaceae', color: '#759395'},
+{code: 'CR', common: 'Hawthorn', genus: 'Crataegus', species: 'monogyna', family: 'Rosaceae', color: '#458b89'},
+{code: 'MA2', common: 'Crabapple', genus: 'Malus', species: '', family: 'Rosaceae', color: '#9f001a'},
+{code: 'PR', common: 'Flowering Cherry', genus: 'Prunus', species: 'serrulata', family: 'Rosaceae', color: '#6b0037'},
+{code: 'BE', common: 'Birch', genus: 'Betula', species: '', family: 'Betulaceae', color: '#096d67'},
+{code: 'PRVISH', common: 'Schubert Cherry', genus: 'Prunus', species: 'virginiana 'Schubert'', family: 'Rosaceae', color: '#653e55'},
+{code: 'PRCE', common: 'Purpleleaf Plum', genus: 'Prunus', species: 'cerasifera', family: 'Rosaceae', color: '#6f174b'},
+{code: 'AM', common: 'Serviceberry', genus: 'Amelanchier', species: 'arborea', family: 'Rosaceae', color: '#22148c'},
+{code: 'CEOC', common: 'Hackberry', genus: 'Celtis', species: 'occidentalis', family: 'Cannabaceae', color: '#94ac7d'},
+{code: 'CABE', common: 'European Hornbeam', genus: 'Carpinus', species: 'betulus', family: 'Betulaceae', color: '#4f8c14'},
+{code: 'QUPH', common: 'Willow Oak', genus: 'Quercus', species: 'phellos', family: 'Fagaceae', color: '#96a5c2'},
+{code: 'QUAC', common: 'Sawtooth Oak', genus: 'Quercus', species: 'acutissima', family: 'Fagaceae', color: '#fff0ff'},
+{code: 'MA1', common: 'Magnolia', genus: 'Magnolia', species: '', family: 'Magnoliaceae', color: '#777f8d'},
+{code: 'PO', common: 'Poplar', genus: 'Populus', species: '', family: 'Salicaceae', color: '#a0d9d3'},
+{code: 'MO', common: 'Mulberry', genus: 'Morus', species: '', family: 'Moraceae', color: '#d9a0cf'},
+{code: 'QURU', common: 'Northern Red Oak', genus: 'Quercus', species: 'rubra', family: 'Fagaceae', color: '#aa1639'},
+{code: 'QUBI', common: 'Swamp White Oak', genus: 'Quercus', species: 'bicolor', family: 'Fagaceae', color: '#eab3c0'},
+{code: 'QURO', common: 'English Oak', genus: 'Quercus', species: 'robur', family: 'Fagaceae', color: '#30526c'},
+{code: 'QUAL', common: 'White Oak', genus: 'Quercus', species: 'alba', family: 'Fagaceae', color: '#fff'},
+{code: 'MEGL', common: 'Dawn Redwood', genus: 'Metasequoia', species: 'glyptostroboides', family: 'Cupressaceae', color: '#f7a228'},
+{code: 'PIST', common: 'Eastern White Pine', genus: 'Pinus', species: 'strobus', family: 'Pinaceae', color: '#c9ffab'},
+{code: 'TADI', common: 'Baldcypress', genus: 'Taxodium', species: 'distichum', family: 'Cupressaceae', color: '#ff8034'}
+];
+
 zoomed();
 
 function createMap(dataset) {
