--- a/index.html
+++ b/index.html
@@ -298,123 +298,75 @@ var info = map.append("div")
     .attr("class", "info")
 		.html("<div id='leftbox'><span style='color:#0096ff;'>Brooklyn Street Trees</span><br/>Data from <a href='https://nycopendata.socrata.com/Environment/Street-Tree-Census-Brooklyn-/ztcw-bzc8'>NYC Open Data</a></div>");
 
-var trees = {
-		ACPL: ['Norway Maple', 'Acer', 'platanoides', 'Sapindaceae', '#00567e'],
-		ACRU: ['Red Maple', 'Acer', 'rubrum', 'Sapindaceae', '#0084ff'],
-		ACSA1: ['Silver Maple', 'Acer', 'saccharinum', 'Sapindaceae', '#c3c3c3'],
-		FRPE: ['Green Ash', 'Fraxinus', 'pennsylvanica', 'Oleaceae', '#007e59'],
-		GLTR: ['Honeylocust', 'Gleditsia', 'triacanthos', 'Fabaceae', '#dcab00'],
-		TICO: ['Littleleaf Linden', 'Tilia', 'cordata', 'Tiliaceae', '#006ddc'],
-		PYCA: ['Callery Pear', 'Pyrus ', 'calleryana', 'Rosaceae', '#00dc53'],
-		QUPA: ['Pin Oak', 'Quercus', 'palustris', 'Fagaceae', '#739351'],
-		PLAC: ['London Planetree', 'Platanus', 'X acerfolia', 'Platanaceae', '#da4c4c'],
-		GIBI: ['Ginkgo', 'Ginkgo', 'biloba', 'Ginkgoaceae', '#deee27'],
-		SYRE: ['Japanese Tree Lilac', 'Syringa', 'reticulata', 'Oleaceae', '#b827ee'],
-		COFL: ['Flowering Dogwood', 'Cornus', 'florida', 'Cornaceae', '#ee27a6'],
-		CEJA: ['Katsura Tree', 'Cercidiphyllum', 'japonicum', 'Cercidiphyllaceae', '#385b9a'],
-		AEHI: ['Horsechestnut', 'Aesculus', 'hippocastanum', 'Sapindaceae', '#193569'],
-		ACPLCK: ['Norway Maple Crimson King', 'Acer', 'platanoides Crimson King', 'Sapindaceae', '#ff0030'],
-		ACSA2: ['Sugar Maple', 'Acer', 'saccharum', 'Sapindaceae', '#61827a'],
-		ACCA: ['Hedge Maple', 'Acer', 'campestre', 'Sapindaceae', '#39806f'],
-		ACGI: ['Amur Maple', 'Acer', 'ginnala', 'Sapindaceae', '#04646d'],
-		ACPA: ['Japanese Maple', 'Acer', 'palmatum', 'Sapindaceae', '#01a3e7'],
-		ACPS: ['Sycamore Maple', 'Acer', 'pseudoplatanus', 'Sapindaceae', '#3c9eac'],
-		STJA2: ['Japanese Pagoda Tree', 'Sophora', 'japonica', 'Fabaceae', '#0b6d7c'],
-		ROPS: ['Black Locust', 'Robinia', 'pseudoacacia', 'Fabaceae', '#000'],
-		ULAM: ['American Elm', 'Ulmus', 'americana', 'Ulmaceae', '#cd3a00'],
-		ULPA: ['Chinese Elm', 'Ulmus', 'parvifolia', 'Ulmaceae', '#7c2b0b'],
-		ZESE: ['Japanese Zelkova', 'Zelkova', 'serrata', 'Ulmaceae', '#00cd05'],			
-		LIST: ['Sweetgum', 'Liquidambar', 'styraciflua', 'Altingiaceae', '#cd6f00'],
-		GYDI: ['Kentucky Coffeetree', 'Gymnocladus', 'dioicus', 'Fabaceae', '#61390a'],
-		AIAL: ['Tree of Heaven', 'Ailanthus', 'altissima', 'Simaroubaceae', '#fff4c8'],
-		KOPA: ['Goldenrain Tree', 'Koelreuteria', 'paniculata', 'Sapindaceae', '#e0b712'],
-		CECA: ['Eastern Redbud', 'Cercis', 'canadensis', 'Fabaceae', '#7b0c21'],
-		LITU: ['Tulip Tree', 'Liriodendron', 'tulipifera', 'Magnoliaceae', '#b2223d'],
-		TIAM: ['American Linden', 'Tilia', 'americana', 'Tiliaceae', '#81d4d9'],
-		TITO: ['Silver Linden', 'Tilia', 'tomentosa', 'Malvaceae', '#759395'],
-		CR: ['Hawthorn', 'Crataegus', 'monogyna', 'Rosaceae', '#458b89'],
-		MA2: ['Crabapple', 'Malus', '', 'Rosaceae', '#9f001a'],
-		PR: ['Flowering Cherry', 'Prunus', 'serrulata', 'Rosaceae', '#6b0037'],
-		BE: ['Birch', 'Betula', '', 'Betulaceae', '#096d67'],
-		PRVISH: ['Schubert Cherry', 'Prunus', 'virginiana Schubert', 'Rosaceae', '#653e55'],
-		PRCE: ['Purpleleaf Plum', 'Prunus', 'cerasifera', 'Rosaceae', '#6f174b'],
-		AM: ['Serviceberry', 'Amelanchier', 'arborea', 'Rosaceae', '#22148c'],
-		CEOC: ['Hackberry', 'Celtis', 'occidentalis', 'Cannabaceae', '#94ac7d'],
-		CABE: ['European Hornbeam', 'Carpinus', 'betulus', 'Betulaceae', '#4f8c14'],
-		QUPH: ['Willow Oak', 'Quercus', 'phellos', 'Fagaceae', '#96a5c2'],
-		QUAC: ['Sawtooth Oak', 'Quercus', 'acutissima', 'Fagaceae', '#fff0ff'],
-		MA1: ['Magnolia', 'Magnolia', '', 'Magnoliaceae', '#777f8d'],
-		PO: ['Poplar', 'Populus', '', 'Salicaceae', '#a0d9d3'],
-		MO: ['Mulberry', 'Morus', '', 'Moraceae', '#d9a0cf'],
-		QURU: ['Northern Red Oak', 'Quercus', 'rubra', 'Fagaceae', '#aa1639'],
-		QUBI: ['Swamp White Oak', 'Quercus', 'bicolor', 'Fagaceae', '#eab3c0'],
-		QURO: ['English Oak', 'Quercus', 'robur', 'Fagaceae', '#30526c'],
-		QUAL: ['White Oak', 'Quercus', 'alba', 'Fagaceae', '#fff'],
-		MEGL: ['Dawn Redwood', 'Metasequoia', 'glyptostroboides', 'Cupressaceae', '#f7a228'],
-		PIST: ['Eastern White Pine', 'Pinus', 'strobus', 'Pinaceae', '#c9ffab'],
-		TADI: ['Baldcypress', 'Taxodium', 'distichum', 'Cupressaceae', '#ff8034'],
-};
+var trees = [
+		{code: 'ACPL', common: 'Norway Maple', genus: 'Acer', species: 'platanoides', family: 'Sapindaceae', color: '#00567e'},
+		{code: 'ACRU', common: 'Red Maple', genus: 'Acer', species: 'rubrum', family: 'Sapindaceae', color: '#0084ff'},
+		{code: 'ACSA1', common: 'Silver Maple', genus: 'Acer', species: 'saccharinum', family: 'Sapindaceae', color: '#c3c3c3'},
+		{code: 'FRPE', common: 'Green Ash', genus: 'Fraxinus', species: 'pennsylvanica', family: 'Oleaceae', color: '#007e59'},
+		{code: 'GLTR', common: 'Honeylocust', genus: 'Gleditsia', species: 'triacanthos', family: 'Fabaceae', color: '#dcab00'},
+		{code: 'TICO', common: 'Littleleaf Linden', genus: 'Tilia', species: 'cordata', family: 'Tiliaceae', color: '#006ddc'},
+		{code: 'PYCA', common: 'Callery Pear', genus: 'Pyrus ', species: 'calleryana', family: 'Rosaceae', color: '#00dc53'},
+		{code: 'QUPA', common: 'Pin Oak', genus: 'Quercus', species: 'palustris', family: 'Fagaceae', color: '#739351'},
+		{code: 'PLAC', common: 'London Planetree', genus: 'Platanus', species: 'X acerfolia', family: 'Platanaceae', color: '#da4c4c'},
+		{code: 'GIBI', common: 'Ginkgo', genus: 'Ginkgo', species: 'biloba', family: 'Ginkgoaceae', color: '#deee27'},
+		{code: 'SYRE', common: 'Japanese Tree Lilac', genus: 'Syringa', species: 'reticulata', family: 'Oleaceae', color: '#b827ee'},
+		{code: 'COFL', common: 'Flowering Dogwood', genus: 'Cornus', species: 'florida', family: 'Cornaceae', color: '#ee27a6'},
+		{code: 'CEJA', common: 'Katsura Tree', genus: 'Cercidiphyllum', species: 'japonicum', family: 'Cercidiphyllaceae', color: '#385b9a'},
+		{code: 'AEHI', common: 'Horsechestnut', genus: 'Aesculus', species: 'hippocastanum', family: 'Sapindaceae', color: '#193569'},
+		{code: 'ACPLCK', common: 'Norway Maple Crimson King', genus: 'Acer', species: 'platanoides Crimson King', family: 'Sapindaceae', color: '#ff0030'},
+		{code: 'ACSA2', common: 'Sugar Maple', genus: 'Acer', species: 'saccharum', family: 'Sapindaceae', color: '#61827a'},
+		{code: 'ACCA', common: 'Hedge Maple', genus: 'Acer', species: 'campestre', family: 'Sapindaceae', color: '#39806f'},
+		{code: 'ACGI', common: 'Amur Maple', genus: 'Acer', species: 'ginnala', family: 'Sapindaceae', color: '#04646d'},
+		{code: 'ACPA', common: 'Japanese Maple', genus: 'Acer', species: 'palmatum', family: 'Sapindaceae', color: '#01a3e7'},
+		{code: 'ACPS', common: 'Sycamore Maple', genus: 'Acer', species: 'pseudoplatanus', family: 'Sapindaceae', color: '#3c9eac'},
+		{code: 'STJA2', common: 'Japanese Pagoda Tree', genus: 'Sophora', species: 'japonica', family: 'Fabaceae', color: '#0b6d7c'},
+		{code: 'ROPS', common: 'Black Locust', genus: 'Robinia', species: 'pseudoacacia', family: 'Fabaceae', color: '#000'},
+		{code: 'ULAM', common: 'American Elm', genus: 'Ulmus', species: 'americana', family: 'Ulmaceae', color: '#cd3a00'},
+		{code: 'ULPA', common: 'Chinese Elm', genus: 'Ulmus', species: 'parvifolia', family: 'Ulmaceae', color: '#7c2b0b'},
+		{code: 'ZESE', common: 'Japanese Zelkova', genus: 'Zelkova', species: 'serrata', family: 'Ulmaceae', color: '#00cd05'},
+		{code: 'LIST', common: 'Sweetgum', genus: 'Liquidambar', species: 'styraciflua', family: 'Altingiaceae', color: '#cd6f00'},
+		{code: 'GYDI', common: 'Kentucky Coffeetree', genus: 'Gymnocladus', species: 'dioicus', family: 'Fabaceae', color: '#61390a'},
+		{code: 'AIAL', common: 'Tree of Heaven', genus: 'Ailanthus', species: 'altissima', family: 'Simaroubaceae', color: '#fff4c8'},
+		{code: 'KOPA', common: 'Goldenrain Tree', genus: 'Koelreuteria', species: 'paniculata', family: 'Sapindaceae', color: '#e0b712'},
+		{code: 'CECA', common: 'Eastern Redbud', genus: 'Cercis', species: 'canadensis', family: 'Fabaceae', color: '#7b0c21'},
+		{code: 'LITU', common: 'Tulip Tree', genus: 'Liriodendron', species: 'tulipifera', family: 'Magnoliaceae', color: '#b2223d'},
+		{code: 'TIAM', common: 'American Linden', genus: 'Tilia', species: 'americana', family: 'Tiliaceae', color: '#81d4d9'},
+		{code: 'TITO', common: 'Silver Linden', genus: 'Tilia', species: 'tomentosa', family: 'Malvaceae', color: '#759395'},
+		{code: 'CR', common: 'Hawthorn', genus: 'Crataegus', species: 'monogyna', family: 'Rosaceae', color: '#458b89'},
+		{code: 'MA2', common: 'Crabapple', genus: 'Malus', species: '', family: 'Rosaceae', color: '#9f001a'},
+		{code: 'PR', common: 'Flowering Cherry', genus: 'Prunus', species: 'serrulata', family: 'Rosaceae', color: '#6b0037'},
+		{code: 'BE', common: 'Birch', genus: 'Betula', species: '', family: 'Betulaceae', color: '#096d67'},
+		{code: 'PRVISH', common: 'Schubert Cherry', genus: 'Prunus', species: 'virginiana Schubert', family: 'Rosaceae', color: '#653e55'},
+		{code: 'PRCE', common: 'Purpleleaf Plum', genus: 'Prunus', species: 'cerasifera', family: 'Rosaceae', color: '#6f174b'},
+		{code: 'AM', common: 'Serviceberry', genus: 'Amelanchier', species: 'arborea', family: 'Rosaceae', color: '#22148c'},
+		{code: 'CEOC', common: 'Hackberry', genus: 'Celtis', species: 'occidentalis', family: 'Cannabaceae', color: '#94ac7d'},
+		{code: 'CABE', common: 'European Hornbeam', genus: 'Carpinus', species: 'betulus', family: 'Betulaceae', color: '#4f8c14'},
+		{code: 'QUPH', common: 'Willow Oak', genus: 'Quercus', species: 'phellos', family: 'Fagaceae', color: '#96a5c2'},
+		{code: 'QUAC', common: 'Sawtooth Oak', genus: 'Quercus', species: 'acutissima', family: 'Fagaceae', color: '#fff0ff'},
+		{code: 'MA1', common: 'Magnolia', genus: 'Magnolia', species: '', family: 'Magnoliaceae', color: '#777f8d'},
+		{code: 'PO', common: 'Poplar', genus: 'Populus', species: '', family: 'Salicaceae', color: '#a0d9d3'},
+		{code: 'MO', common: 'Mulberry', genus: 'Morus', species: '', family: 'Moraceae', color: '#d9a0cf'},
+		{code: 'QURU', common: 'Northern Red Oak', genus: 'Quercus', species: 'rubra', family: 'Fagaceae', color: '#aa1639'},
+		{code: 'QUBI', common: 'Swamp White Oak', genus: 'Quercus', species: 'bicolor', family: 'Fagaceae', color: '#eab3c0'},
+		{code: 'QURO', common: 'English Oak', genus: 'Quercus', species: 'robur', family: 'Fagaceae', color: '#30526c'},
+		{code: 'QUAL', common: 'White Oak', genus: 'Quercus', species: 'alba', family: 'Fagaceae', color: '#fff'},
+		{code: 'MEGL', common: 'Dawn Redwood', genus: 'Metasequoia', species: 'glyptostroboides', family: 'Cupressaceae', color: '#f7a228'},
+		{code: 'PIST', common: 'Eastern White Pine', genus: 'Pinus', species: 'strobus', family: 'Pinaceae', color: '#c9ffab'},
+		{code: 'TADI', common: 'Baldcypress', genus: 'Taxodium', species: 'distichum', family: 'Cupressaceae', color: '#ff8034'}
+];
+		
+trees.forEach(function(t) {
+	var boo = t.code
+	var sue = t.common
+});
 
 var tip = d3.tip()
 		.attr('class', 'd3-tip')
 		.offset([-10, 0])
-		.html(function(d) { 
-			if ( d.SPECIES == "ACPL" ) { return "Norway Maple"
-					} else if ( d.SPECIES == "ACRU" ) { return "Red Maple"
-					} else if ( d.SPECIES == "ACSA1" ) { return "Silver Maple"
-					} else if ( d.SPECIES == "FRPE" ) { return "Green Ash"
-					} else if ( d.SPECIES == "GLTR" ) { return "Honeylocust"
-					} else if ( d.SPECIES == "TICO" ) { return "Littleleaf Linden"
-					} else if ( d.SPECIES == "PYCA" ) { return "Callery Pear"
-					} else if ( d.SPECIES == "QUPA" ) { return "Pin Oak"
-					} else if ( d.SPECIES == "PLAC" ) { return "London Planetree"
-					} else if ( d.SPECIES == "GIBI" ) { return "Ginkgo"
-					} else if ( d.SPECIES == "SYRE" ) { return "Japanese Tree Lilac"
-					} else if ( d.SPECIES == "COFL" ) { return "Flowering Dogwood"
-					} else if ( d.SPECIES == "CEJA" ) { return "Katsura Tree"
-					} else if ( d.SPECIES == "AEHI" ) { return "Horsechestnut"
-					} else if ( d.SPECIES == "ACPLCK" ) { return "Norway Maple Crimson King"
-					} else if ( d.SPECIES == "ACSA2" ) { return "Sugar Maple"
-					} else if ( d.SPECIES == "ACCA" ) { return "Hedge Maple"
-					} else if ( d.SPECIES == "ACGI" ) { return "Amur Maple"
-					} else if ( d.SPECIES == "ACPA" ) { return "Japanese Maple"
-					} else if ( d.SPECIES == "ACPS" ) { return "Sycamore Maple"
-					} else if ( d.SPECIES == "STJA2" ) { return "Japanese Pagoda Tree"
-					} else if ( d.SPECIES == "ROPS" ) { return "Black Locust"
-					} else if ( d.SPECIES == "ULAM" ) { return "American Elm"
-					} else if ( d.SPECIES == "ULPA" ) { return "Chinese Elm"
-					} else if ( d.SPECIES == "ZESE" ) { return "Zelkova"
-					} else if ( d.SPECIES == "LIST" ) { return "Sweetgum"
-					} else if ( d.SPECIES == "GYDI" ) { return "Kentucky Coffeetree"
-					} else if ( d.SPECIES == "AIAL" ) { return "Tree of Heaven"
-					} else if ( d.SPECIES == "KOPA" ) { return "Goldenrain Tree"
-					} else if ( d.SPECIES == "CECA" ) { return "Eastern Redbud"
-					} else if ( d.SPECIES == "LITU" ) { return "Tulip Tree"
-					} else if ( d.SPECIES == "TIAM" ) { return "American Linden"
-					} else if ( d.SPECIES == "TITO" ) { return "Silver Linden"
-					} else if ( d.SPECIES == "CR" ) { return "Hawthorn"
-					} else if ( d.SPECIES == "MA2" ) { return "Crabapple"
-					} else if ( d.SPECIES == "PR" ) { return "Flowering Cherry"
-					} else if ( d.SPECIES == "BE" ) { return "Birch"
-					} else if ( d.SPECIES == "PRVISH" ) { return "Schubert Cherry"
-					} else if ( d.SPECIES == "PRCE" ) { return "Purpleleaf Plum"
-					} else if ( d.SPECIES == "AM" ) { return "Serviceberry"
-					} else if ( d.SPECIES == "CEOC" ) { return "Hackberry"
-					} else if ( d.SPECIES == "CABE" ) { return "European Hornbeam"
-					} else if ( d.SPECIES == "QUPH" ) { return "Willow Oak"
-					} else if ( d.SPECIES == "QUAC" ) { return "Sawtooth Oak"
-					} else if ( d.SPECIES == "MA1" ) { return "Magnolia"
-					} else if ( d.SPECIES == "PO" ) { return "Poplar"
-					} else if ( d.SPECIES == "MO" ) { return "Mulberry"
-					} else if ( d.SPECIES == "QURU" ) { return "Northern Red Oak"
-					} else if ( d.SPECIES == "QUBI" ) { return "Swamp White Oak"
-					} else if ( d.SPECIES == "QURO" ) { return "English Oak"
-					} else if ( d.SPECIES == "QUAL" ) { return "White Oak"
-					} else if ( d.SPECIES == "MEGL" ) { return "Dawn Redwood"
-					} else if ( d.SPECIES == "PIST" ) { return "Eastern White Pine"
-					} else if ( d.SPECIES == "TADI" ) { return "Baldcypress"
-					} else { return "Unknown";
-}})
+		.html(function(d){if (d.SPECIES == boo){
+			return sue
+		}
+			})
 			
 		points.call(tip);
 		
